--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,15 +1,21 @@
-akka {
-  loglevel = WARNING
+akka.http {
+  server {
+    remote-address-header = on
+    parsing.max-uri-length = 10k
+  }
+  parsing.max-uri-length = 10k
+
+  host-connection-pool.max-open-requests = 64
 }
 
 http {
-  interface = "localhost"
-  port = 5432
+  interface = "127.0.0.1"
+  port = "8080"
 }
+
 database = {
-  url = "jdbc:postgresql://127.0.0.1/postgres"
+  url = "jdbc:postgresql://localhost:5432/postgres"
   user = "postgres"
   password = "postgres"
-  driver = org.postgresql.Driver
 }
 
